--- a/PizzaBuddy/Info.plist
+++ b/PizzaBuddy/Info.plist
@@ -53,6 +53,8 @@
 	<string>Location required for mapping features</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location required for mapping features</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Location required for mapping features</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
